Add CSS deps and sample render

--- a/package.json
+++ b/package.json
@@ -1,20 +1,23 @@
 {
-  "name": "floss-stash",
+  "name": "floss-stsh",
   "version": "1.0.0",
-  "description": "Embroidery floss inventory",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next dev"
   },
   "keywords": [],
   "author": "Olga",
   "license": "ISC",
   "dependencies": {
+    "autoprefixer": "9.7.4",
     "next": "^9.2.1",
+    "postcss-import": "12.0.1",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "tailwindcss": "1.1.4"
   },
   "devDependencies": {
     "@types/node": "^13.7.0",
