--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "license": "ISC",
   "dependencies": {
     "autoprefixer": "9.7.4",
+    "mobx": "^5.15.4",
+    "mobx-react": "^6.1.8",
     "next": "^9.2.1",
     "postcss-import": "12.0.1",
     "react": "^16.12.0",
@@ -20,8 +22,11 @@
     "tailwindcss": "1.1.4"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-decorators": "^7.8.3",
     "@types/node": "^13.7.0",
     "@types/react": "^16.9.19",
+    "babel-plugin-transform-typescript-metadata": "^0.2.2",
     "typescript": "^3.7.5"
   }
 }
